--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
 .app-wrapper {
-    margin: 0 auto;
-    width: 1200px;
     display: grid;
-    grid-template-areas:
-     "h h"
-     "n c";
-
-    grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
+    width: 1200px;
+    margin: 0 auto;
+    grid-template-rows: 80px 1fr;
+    grid-template-columns: 1fr 4fr;
+grid-template-areas:
+        " h h "
+"n c"
 
     /*grid-gap: 10px;*/
 }
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: #899960;
+    background-color: #c4dfe6;
 }
 
 
