--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     grid-area: h;
-    background-color: #f6ae7a;
+    background-color: #66a5ad;
 }
 
 .header img {
@@ -9,4 +9,6 @@
 
 .loginBlock {
     float: right;
+    color: dimgray;
+    font-family: Rubik;
 }
