--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 .app-wrapper {
+    height: 100vh;
+    width: 100%;
     display: grid;
-    width: 1200px;
     margin: 0 auto;
     grid-template-rows: 80px 1fr;
     grid-template-columns: 1fr 4fr;
-grid-template-areas:
+    grid-template-areas:
         " h h "
 "n c"
+    "f f "
 
     /*grid-gap: 10px;*/
 }
