--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,11 +1,15 @@
 .paginator {
     margin: 10px;
+    cursor: pointer;
 }
 .pageNumber {
     padding: 2px;
-    border: 1px solid black;
+
 }
 .pageNumber.selectedPage {
-    border-color: black;
-    font-weight: bold;
+    color: #1976d2;
+    font-weight: 500;
+    font-size: 20px;
+    opacity: inherit;
+
 }
