--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -5,4 +5,9 @@
     width: 500px;
 }
 
-
+.photoSize {
+    max-width: 250px;
+    border: 2px solid green;
+    border-radius:50%;
+    padding:5px;
+}
